Restructure for Azure deployment as primary use case

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,5 +23,11 @@
     },
     "postCreateCommand": "pip install -r requirements.txt",
     "forwardPorts": [3000],
+    "portsAttributes": {
+        "3000": {
+            "label": "MCP Server",
+            "onAutoForward": "notify"
+        }
+    },
     "remoteUser": "vscode"
 }
